third review update, fixing overflow on box text

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -107,9 +107,10 @@ li a:hover {
 .container {
 	display: flex;
 	height: 90vh;
+	min-height: 850px;
 	justify-content: space-evenly;
 	flex-wrap: wrap;
-	align-items: center;
+	align-items: stretch;
 	padding: 20px;
 }
 
@@ -120,19 +121,14 @@ li a:hover {
 .projectbox {
 	text-align: center;
 	width: 30%;
-	height: 45%;
 	box-shadow: 0 5px 5px -5px #000500;
 	background-color: #edeef2;
 	overflow: hidden;
 	margin: 10px;
 	min-height: 350px;
+	min-width: 0px;
 }
 
-.aboutmebox {
-	text-align: center;
-	width: 40%;	
-	
-}
 
 .projectbox img {
   	display: block;
@@ -140,8 +136,18 @@ li a:hover {
   	margin-right: auto;
   	object-fit: cover;
 	width: 100%;
-  	height: 25vh;
+	height: 200px;
   	background-color: #CED3DC;
+}
+
+.projectinfo {
+	height: 50%;
+	flex-shrink: 0;
+}
+
+.aboutmebox {
+	text-align: center;
+	width: 40%;	
 }
 
 
